# bots-control-panel

./: .env.example  README.md  pyproject.toml
src/bots_control_panel/: crud.py  main.py  models.py  schemas.py
src/bots_control_panel/app/: database.py  main.py
src/bots_control_panel/templates/: index.html
