# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"] # Specify build dependencies
build-backend = "setuptools.build_meta"  # Use setuptools as the build backend

[project]
name = "bots_control_panel" # Choose a suitable package name
version = "1.0.0" # Match the version mentioned in the app
description = "FastAPI application to control a specific systemd service via HTTP API."

classifiers = [
    "Development Status :: 4 - Beta", # Or "5 - Production/Stable" when ready
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License", # Match the license above
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: System :: Systems Administration",
]

# --- Core Runtime Dependencies ---
dependencies = [
    "fastapi>=0.90.0,<1.0.0",    # Core web framework
    "uvicorn[standard]>=0.18.0,<1.0.0", # ASGI server with performance extras
    "python-dotenv>=0.20.0,<2.0.0", # For loading .env files (used in example)
    # Add other runtime dependencies here if any
]
